--- a/ShopUnifromProject.csproj
+++ b/ShopUnifromProject.csproj
@@ -14,10 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3" />
     <PackageReference Include="Stripe.net" Version="45.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="IdUpload\" />
+    <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 
 </Project>
