--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ShopUnifromProject-2f6ba7e2-50d5-49cf-97ea-49cd0e146f1a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=test_Db;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "Logging": {
