Fixed emails, added thank you message to orders page. Made sales dasboard numbers have 2dp.

--- a/ShopUnifromProject.csproj
+++ b/ShopUnifromProject.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-ShopUnifromProject-22af9da6-f592-44d7-a7aa-86d64e476211</UserSecretsId>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
